--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,3 +1,2 @@
-<h1>{{message}}</h1>
-<h2>{{error.status}}</h2>
-<pre>{{error.stack}}</pre>
+<div class="error-404" style="  height: 40rem;
+  width: 40rem;"></div>
